Modal and ajax call
Displaying event datas in a modal from an ajax call

--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "Events",
   "private": true,
   "dependencies": {
+    "bootstrap": "4.1.0",
+    "bootstrap3-dialog": "^1.35.4",
     "jquery": "3.2.1",
     "jquery-ui-dist": "1.12.1",
     "jquery-ujs": "1.2.2",
-    "bootstrap": "4.1.0",
-    "popper.js": "1.14.3",
-    "moment": "2.22.1"
+    "moment": "2.22.1",
+    "popper.js": "1.14.3"
   }
 }
